--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "php": ">=5.3.0",
         "symfony/framework-bundle": "~2.6",
         "modera/backend-tools-bundle": "~2.0",
-        "modera/mjr-integration-bundle": "~1.1",
-        "modera/translations-bundle": "~1.0",
+        "modera/mjr-integration-bundle": "~1.1|~2.0",
+        "modera/translations-bundle": "~1.0|~2.0",
         "sergeil/extjslocalization-bundle": "~1.0"
     },
     "autoload": {
